--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -1,7 +1,10 @@
 name: Wanhua 119
 on:
-  schedule:
-    - cron: '* * * * *'
+  push:
+    branches:
+      - main
+#  schedule:
+#    - cron: '*/5 * * * *'
 
 jobs:
   execute_py:
