--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -11,7 +11,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
-    - name: Run script file
+    - shell: Run script file
+      env:
+        SUPER_SECRET: ${{ secrets.SuperSecret }}
+        SUPER_VAR: ${{ secrets.TESTVAR }}
       run: |
         chmod +x ./action_test.py
         ./action_test.py
