--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -16,5 +16,4 @@ jobs:
         SUPER_SECRET: ${{ secrets.SuperSecret }}
         SUPER_VAR: ${{ secrets.TESTVAR }}
       run: |
-        chmod +x ./action_test.py
-        ./action_test.py
+        python3 ./action_test.py
