--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
-    - shell: Run script file
+    - name: Run script file
       env:
         SUPER_SECRET: ${{ secrets.SuperSecret }}
         SUPER_VAR: ${{ secrets.TESTVAR }}
       run: |
-        python ./action_test.py
+        chmod +x ./action_test.py
+        ./action_test.py
