--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -13,8 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run script file
       env:
-        SUPER_SECRET: ${{ secrets.SuperSecret }}
-        SUPER_VAR: ${{ secrets.TESTVAR }}
+        LINE_TOKENS: ${{ secrets.LINE_TOKENS }}
       run: |
-        chmod +x ./action_test.py
-        ./action_test.py
+        chmod +x ./wanhua119.py
+        ./wanhua119.py
