--- a/.github/workflows/wanhua119.yaml
+++ b/.github/workflows/wanhua119.yaml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - main
-#  schedule:
-#    - cron: '*/5 * * * *'
+  schedule:
+    - cron: '*/5 * * * *'  # every 5 minutes
 
 jobs:
   execute_py:
